# IAR

./: DataStreamMining.md  README.md
3CNFSat/: .gitignore  helpers.py  instance_file_handler.py  log_resultados.txt  minimizar.py  solvers.py  uf100-01.cnf
Ants/: CMakeLists.txt
Ants/include/: Ant.hpp  AntManager.hpp  Application.hpp  Defines.hpp  Entity.hpp  EntityManager.hpp  Grain.hpp
Ants/src/: Ant.cpp  AntManager.cpp  Application.cpp  EntityManager.cpp  Grain.cpp  main.cpp
